<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingTop="20dp"
    android:paddingBottom="0dp"
    android:weightSum="1" >

    <TextView
        android:id="@+id/oldLogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="My Log History"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/log_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/oldLogTitle">

        <RadioGroup
            android:id="@+id/radioList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select"
                android:id="@+id/radioButton"
                android:layout_gravity="left"
                android:checked="false"
                android:layout_marginTop="62dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="@+id/radioList"
                android:layout_marginEnd="21dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/textDate" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station"
                android:id="@+id/textStation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odometer"
                android:id="@+id/textOdo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:id="@+id/textGrade" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/textAmount" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:id="@+id/textUnit" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/textTotal" />

        </RadioGroup>

    </ListView>


    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_editlog"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/newEntry"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/newEntry"
        android:layout_width="fill_parent"
        android:text="@string/button_addEntry"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/edit"
        android:layout_alignStart="@+id/edit" />
</RelativeLayout>