<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/side_nav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingTop="50dp"
    tools:showIn="@layout/activity_display"
    android:weightSum="1" >

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addEntry"
        android:layout_gravity="center_horizontal"
        android:onClick="addLog" />
    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view"
        android:layout_gravity="center_horizontal"
        android:onClick="viewLog" />
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_editlog"
        android:layout_gravity="center_horizontal"
        android:onClick="editLog" />

    <Button
        android:id="@+id/overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_overall"
        android:layout_gravity="center_horizontal"
        android:onClick="button_overall" />

</LinearLayout>
